TheXTech Changelog.

Changes for 1.3.2.4
-Allow music change for outro level (if outro level has non-silent music, it will be played instead of built-in)
-Allow unlimited count of episodes and battle levels
-Fixed an incorrect effect frames count rounding, caused glitches at the death effect for a Hammer Bros.
-Corrected the sensitivity of axes-based sticks of game-pads to prevent the mystery, caused by value errors

Changes for 1.3.2.3
-Fixed a SIGFPE crash, caused by an attempt to load some custom effects
-Resolved the inability to grab vegetables normally, caused by an incorrect porting of logical expression

Changes for 1.3.2.2
-Fixed an incorrect computation of effect sizes, caused by a missing part of code

Changes for 1.3.2.1
-Reworked joysticks support
-Added a workaround for case-sensitive file systems
-The 1up sound now playing multiple times if the player has got more than 1 life (for example, a 3-up moon)
-Fixed a broken work of magic potion warp packed inside of a grass container
-Fixed a minor inaccuracy of the moving layers system
-Fixed an incorrect process of blocked playable characters while loaiding the episodes list


Changes for 1.3.2
-Added an own timeout sound-92 for P-Switch timer (will be played with 3 seconds before the end)
-Added a level testing interprocess interface to work with PGE Editor
-Fixed the Podoboo's tail effect glitch
-Fixed an incorrect priority of BGO65 in the level file of SMBX prior to 10 format
-Fixed a classic Bowser's behavior in "The Invasion 1" episode from SMBX 1.0.x
-Removed 20 layers limit to show/hide/toggle per event
-Extended limit to use up to 200 sections in one level
-Added an error message on attempt to open an invalid level file
-Fixed a glitch of the rendering of the two-camera screen caused by an incorrect SDL_RenderSetViewport() call usage


Changes for 1.3.1 (First version made by Wohlstand in March 2020):

Technical stuff