@@ -1,5 +1,8 @@
 TheXTech Changelog.
 
+Changes for DEV
+-Added the "gameinfo.ini" to give the support for the partial customization of internals (window/game title, character names in menu, credits, etc.)
+
 Changes for 1.3.2.4
 -Allow music change for outro level (if outro level has non-silent music, it will be played instead of built-in)
 -Allow unlimited count of episodes and battle levels
